--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name"        : "eslint-config-roadmunk",
-	"version"     : "2.0.3",
+	"version"     : "2.0.4",
 	"description" : "This holds the base Roadmunk shop standard ESLint configuration file.",
 	"license"     : "MIT",
 	"repository"  : "Roadmunk/eslint-config-roadmunk",
 	"peerDependencies": {
-		"eslint" : "~4"
+		"eslint" : "^4.10.0"
 	}
 }
