--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Roadmunk"
+  "author": "Roadmunk",
+  "devDependencies": {
+    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.0.1",
+    "eslint": "^4.19.1"
+  }
 }
