--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "url": "git+https://github.com/Roadmunk/eslint-config-roadmunk.git"
   },
   "peerDependencies": {
-    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.0.2",
     "eslint": "^4.10.0"
   },
   "bugs": {
@@ -19,5 +18,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Roadmunk"
+  "author": "Roadmunk",
+  "dependencies": {
+    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.0.2"
+  }
 }
