--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "author": "Roadmunk",
   "dependencies": {
-    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.4.0"
+    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.4.0",
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
