--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.7.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-vue": "^5.0.0",
     "typescript": "^3.5.2"
