--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@roadmunk/eslint-config-roadmunk",
-  "version": "3.16.0",
+  "version": "3.17.0",
   "description": "This holds the base Roadmunk shop standard ESLint configuration file.",
   "license": "MIT",
   "repository": {
@@ -8,7 +8,8 @@
     "url": "git+https://github.com/Roadmunk/eslint-config-roadmunk.git"
   },
   "peerDependencies": {
-    "eslint": "^4.10.0"
+    "eslint": "^6.0.0",
+    "typescript": "^3.7.3"
   },
   "bugs": {
     "url": "https://github.com/Roadmunk/eslint-config-roadmunk/issues"
@@ -22,16 +23,18 @@
   },
   "author": "Roadmunk",
   "dependencies": {
-    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.8.0",
+    "@roadmunk/eslint-plugin-roadmunk-custom": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
-    "eslint": "^6.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.7.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^6.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.0",
     "typescript": "^3.7.3"
   }
 }
